[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/PlayField.gd" type="Script" id=2]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/TebengePlayer.tscn" type="PackedScene" id=7]

[node name="PlayField" type="Node2D"]
script = ExtResource( 2 )
PlayerThemselves = NodePath("TebengePlayer")
active = true
preActivateTest = true

[node name="TebengePlayer" parent="." instance=ExtResource( 7 )]
position = Vector2( 960, 540 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )

[node name="Board" parent="." instance=ExtResource( 1 )]

[node name="NewSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ArcadeTimeoutTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="BonusTimerLimit" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ContinueTickCountdown" type="Timer" parent="."]
pause_mode = 2

[node name="ArcadeTickoutTimer" type="Timer" parent="."]

[connection signal="eikSerkat" from="TebengePlayer" to="." method="_on_TebengePlayer_eikSerkat"]
[connection signal="pointItIsNow" from="TebengePlayer" to="." method="_on_TebengePlayer_pointItIsNow"]
[connection signal="timeout" from="NewSpawnTimer" to="." method="_on_NewSpawnTimer_timeout"]
[connection signal="timeout" from="ArcadeTimeoutTimer" to="." method="_on_ArcadeTimeoutTimer_timeout"]
[connection signal="timeout" from="BonusTimerLimit" to="." method="_on_BonusTimerLimit_timeout"]
[connection signal="timeout" from="ContinueTickCountdown" to="." method="_on_ContinueTickCountdown_timeout"]
[connection signal="timeout" from="ArcadeTickoutTimer" to="." method="_on_ArcadeTickoutTimer_timeout"]
